# Fast-Quant-Core

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  INTERVIEW_GUIDE.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  install_dependencies.sh  requirements.txt
.github/workflows/: build.yml
app/: __init__.py  binance_connector.py  main.py  pnl_tracker.py  strategy_runner.py
bindings/: CMakeLists.txt  bindings_main.cpp
config/: config.example.yaml
core/include/: indicators.h  market_data.h  strategy.h
docs/: INDICATORS_OPTIMIZATION.md
scripts/: build.sh  demo.py  docker-run.sh  run.sh
tests/: example_strategy_test.cpp  test_indicators_optimization.cpp
